Build: Scaffold Clojure project skeleton and test harness